partial fixes for 'raw use of parmeterized class'